QCLINUX: arm64: dts: qcom: Enable the second ethernet on QCS9075-IQ9 Mezz
Enable the 2.5G Ethernet port on QCS9075-IQ9's Mezzanine board.

Change-Id: I414e4514bbabdfc86ce295b60656654608c2df4b
Signed-off-by: Vishal Kumar Pal <quic_vispal@quicinc.com>
(cherry picked from commit 0da6597e586aa948aa9a78d2bba8841d565913fb)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs9075-addons-iq-9075-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs9075-addons-iq-9075-evk.dts
@@ -11,6 +11,10 @@
 	model = "Qualcomm Technologies, Inc. Addons IQ 9075 EVK";
 	compatible = "qcom,qcs9075-addons-iq-9075-evk", "qcom,qcs9075", "qcom,sa8775p";
 
+	aliases {
+		ethernet1 = &ethernet1;
+	};
+
 	sound {
 		compatible = "qcom,qcs9075-rb8-sndcard";
 		model = "qcs9075-rb8-snd-card";
