arm64: dts: rubikpi3: enable hdmi out interface
Change-Id: I666da3a3147493f6bf1362643fdb301580d687d0
Signed-off-by: hongyang-rp <hongyang.zhao@thundersoft.com>

--- a/arch/arm64/boot/dts/qcom/rubikpi3.dtsi
+++ b/arch/arm64/boot/dts/qcom/rubikpi3.dtsi
@@ -1167,3 +1167,79 @@
 	pinctrl-1 = <&qup_uart7_sleep_cts>, <&qup_uart7_sleep_rts>,
 			<&qup_uart7_sleep_tx>, <&qup_uart7_sleep_rx>;
 };
+
+/ {
+	hdmi-connector {
+		compatible = "hdmi-connector";
+		type = "a";
+		port {
+			hdmi_con: endpoint {
+				remote-endpoint = <&lt9611_out>;
+			};
+		};
+	};
+};
+
+&soc {
+	vreg_lt9611_3p3: lt9611-3p3-vreg {
+		compatible = "regulator-fixed";
+		regulator-name = "vreg_lt9611_3p3";
+		gpio = <&tlmm 83 0>;
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+		enable-active-high;
+		regulator-enable-ramp-delay = <10000>;
+	};
+};
+
+&apps_rsc {
+	regulators-0 {
+		vreg_l6b_1p2: ldo6 {
+			regulator-min-microvolt = <1140000>;
+			regulator-max-microvolt = <1260000>;
+			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
+		};
+	};
+	regulators-1 {
+		vreg_l10c_0p88: ldo10 {
+			regulator-min-microvolt = <880000>;
+			regulator-max-microvolt = <1050000>;
+			regulator-initial-mode = <RPMH_REGULATOR_MODE_HPM>;
+		};
+	};
+};
+
+&i2c9 {
+	status = "okay";
+	lt9611_codec: hdmi-bridge@39 {
+		compatible = "lontium,lt9611";
+		reg = <0x39>;
+		interrupts-extended = <&tlmm 20 2>;
+		reset-gpios = <&tlmm 21 0>;
+		enable-gpios = <&tlmm 40 0>;
+		ocb-gpios = <&tlmm 41 0>;
+		vcc-supply = <&vreg_lt9611_3p3>;
+		config-mode = "edidAdaptiveResolution";
+		ports {
+			#address-cells = <1>;
+			#size-cells = <0>;
+			port@0 {
+				reg = <0>;
+				lt9611_a: endpoint {
+					remote-endpoint = <&mdss_dsi0_out>;
+				};
+			};
+			port@2 {
+				reg = <2>;
+				lt9611_out: endpoint {
+					remote-endpoint = <&hdmi_con>;
+				};
+			};
+		};
+	};
+};
+
+&mdss_dsi0_out {
+	remote-endpoint = <&lt9611_a>;
+	data-lanes = <0 1 2 3>;
+};
