PENDING: arm64: dts: qcom: Rearrange the role switch for QCS6490 RB3Gen2
Since EUD is present in between the USB connector and the controller,
rearrange the remote endpoints accordingly for QCS6490 RB3Gen2. As per
this new arrangement, one ep of eud is connected to the USB connector
and other endpoint to the USB controller.

Change-Id: I0c308c645158c06ba757a27b596064b2644b6321
Signed-off-by: Krishna Kurapati <krishna.kurapati@oss.qualcomm.com>
(cherry picked from commit 54cd9b78ef6a4a0d1e41fd3617e430b11cc5c700)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs6490-rb3gen2.dts
+++ b/arch/arm64/boot/dts/qcom/qcs6490-rb3gen2.dts
@@ -98,7 +98,7 @@
 					reg = <0>;
 
 					pmic_glink_hs_in: endpoint {
-						remote-endpoint = <&usb_1_dwc3_hs>;
+						remote-endpoint = <&eud_con>;
 					};
 				};
 
@@ -479,6 +479,19 @@
 			regulator-max-microvolt = <3960000>;
 		};
 	};
+};
+
+&eud {
+	usb-role-switch;
+	status = "okay";
+};
+
+&eud_con {
+	remote-endpoint = <&pmic_glink_hs_in>;
+};
+
+&eud_ep {
+	remote-endpoint = <&usb_1_dwc3_hs>;
 };
 
 &gcc {
@@ -1130,7 +1143,7 @@
 };
 
 &usb_1_dwc3_hs {
-	remote-endpoint = <&pmic_glink_hs_in>;
+	remote-endpoint = <&eud_ep>;
 };
 
 &usb_1_hsphy {
