--- a/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk-pro-sku.dts
+++ b/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk-pro-sku.dts
@@ -7,6 +7,7 @@
 
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/regulator/qcom,rpmh-regulator.h>
+#include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/spmi/spmi.h>
 #include "qcs8300.dtsi"
 #include "qcs8300-pmics.dtsi"
@@ -322,6 +323,21 @@
 };
 
 &uart7 {
+	status = "okay";
+};
+
+&ufs_mem_hc {
+	reset-gpios = <&tlmm 133 GPIO_ACTIVE_LOW>;
+	vcc-supply = <&vreg_l8a>;
+	vcc-max-microamp = <1100000>;
+	vccq-supply = <&vreg_l4c>;
+	vccq-max-microamp = <1200000>;
+	status = "okay";
+};
+
+&ufs_mem_phy {
+	vdda-phy-supply = <&vreg_l4a>;
+	vdda-pll-supply = <&vreg_l5a>;
 	status = "okay";
 };
 
