PENDING: arm64: dts: qcom: Add SD card support for QCS8275 IQ EVK
Add SD card support for QCS8275 IQ EVK board.

Use dummy regulators for vmmc and vqmmc supply as QCS8275 IQ EVK
hardware has direct supplies for SD card circuitry instead of via
votable regulators. This ensures driver probe is not deferred or failed
in absence of supply properties.

Change-Id: I358a595b2edf62abdf22e5d7a1bb5522b5290d7a
Signed-off-by: Monish Chunara <quic_mchunara@quicinc.com>
(cherry picked from commit 1c6534874f2ac117c0a3cfae9661f20521ab8d2a)
(cherry picked from commit b6ab5aee516c44cf34f2fd1362d13dd9642fe5c2)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk.dts
@@ -27,6 +27,22 @@
 	chosen {
 		stdout-path = "serial0:115200n8";
 	};
+
+	dummy_reg: regulator-dummy {
+		compatible = "regulator-fixed";
+		regulator-name = "dummy-supply";
+
+		regulator-min-microvolt = <2950000>;
+		regulator-max-microvolt = <2950000>;
+	};
+
+	dummy_s4a: regulator-dummy-s4a {
+		compatible = "regulator-fixed";
+		regulator-name = "dummy-supply-s4a";
+
+		regulator-min-microvolt = <2950000>;
+		regulator-max-microvolt = <2950000>;
+	};
 };
 
 &apps_rsc {
@@ -458,6 +474,23 @@
 	status = "okay";
 };
 
+&sdhc_2 {
+	vmmc-supply = <&dummy_reg>;
+	vqmmc-supply = <&dummy_s4a>;
+
+	pinctrl-names = "default", "sleep";
+	pinctrl-0 = <&sdc2_clk>, <&sdc2_cmd>, <&sdc2_data>, <&sd_cd>;
+	pinctrl-1 = <&sdc2_clk_sleep>, <&sdc2_cmd_sleep>, <&sdc2_data_sleep>, <&sd_cd>;
+
+	cap-sd-highspeed;
+
+	cd-gpios = <&tlmm 11 GPIO_ACTIVE_LOW>;
+
+	iommus = <&apps_smmu 0x0 0x0>;
+
+	status = "okay";
+};
+
 &serdes0 {
 	phy-supply = <&vreg_l5a>;
 	status = "okay";
@@ -553,6 +586,48 @@
 		pins = "gpio91", "gpio92";
 		function = "qup1_se7";
 		drive-strength = <2>;
+		bias-pull-up;
+	};
+
+	sdc2_clk: sdc2-clk-state {
+		pins = "sdc2_clk";
+		bias-disable;
+		drive-strength = <16>;
+	};
+
+	sdc2_cmd: sdc2-cmd-state {
+		pins = "sdc2_cmd";
+		bias-pull-up;
+		drive-strength = <10>;
+	};
+
+	sdc2_data: sdc2-data-state {
+		pins = "sdc2_data";
+		bias-pull-up;
+		drive-strength = <10>;
+	};
+
+	sdc2_clk_sleep: sdc2-clk-sleep-state {
+		pins = "sdc2_clk";
+		drive-strength = <2>;
+		bias-bus-hold;
+	};
+
+	sdc2_cmd_sleep: sdc2-cmd-sleep-state {
+		pins = "sdc2_cmd";
+		drive-strength = <2>;
+		bias-bus-hold;
+	};
+
+	sdc2_data_sleep: sdc2-data-sleep-state {
+		pins = "sdc2_data";
+		drive-strength = <2>;
+		bias-bus-hold;
+	};
+
+	sd_cd: sd-cd-state {
+		pins = "gpio11";
+		function = "gpio";
 		bias-pull-up;
 	};
 };
