PENDING: arm64: dts: qcom: tpm enablement for qcs8275-iq-8275-evk
Enable tpm to communicate over spi through gpio for qcs8275-iq-8275-evk.

Change-Id: Ia826a6e160720d1725d41565b882070a0dec1816
Signed-off-by: Khalid-Faisal <quic_afaisal@quicinc.com>
(cherry picked from commit 257764c1b2e146293281e781c6a9278516663e81)
(cherry picked from commit c2fde8d8f367cee301d7d7683eadf1620bc4527a)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk.dts
@@ -507,6 +507,19 @@
 	};
 };
 
+&spi10 {
+	status = "okay";
+
+	st33htpm0: st33htpm@0 {
+		compatible = "st,st33htpm-spi";
+		reg = <0>;
+		spi-max-frequency = <20000000>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+		status = "okay";
+	};
+};
+
 &tlmm {
 
 	dp_hot_plug_det: dp-hot-plug-det-state {
