PENDING: arm64: dts: qcom: Add wakeup source property in USB0 port controller
For resuming the system from complete system suspend, add wakeup source
property for the interrupt inside USB0 port controller.

Change-Id: I3b02f12f2aa5503e6bb0e257ad6063cb56e1f9ac
Signed-off-by: Swati Agarwal <quic_swatagar@quicinc.com>
(cherry picked from commit 315cf4e23a70682500dcab9437c2bbe0b3f9f820)
(cherry picked from commit ff819b8c49faa60d04616d56715b140822438ff6)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
@@ -484,6 +484,7 @@
 		reg = <0x67>;
 		interrupt-parent = <&pmm8654au_2_gpios>;
 		interrupts = < 5 IRQ_TYPE_EDGE_FALLING>;
+		wakeup-source;
 
 		connector@0 {
 			compatible = "usb-c-connector";
