--- a/arch/arm64/boot/dts/qcom/sc7280.dtsi
+++ b/arch/arm64/boot/dts/qcom/sc7280.dtsi
@@ -1067,6 +1067,7 @@
 			reg = <0x0 0x7C8000 0x0 0x10000>;
 			qcom,ice-use-hwkm;
 			clocks = <&gcc GCC_SDCC1_ICE_CORE_CLK>;
+			status = "okay";
 		};
 
 		gpi_dma0: dma-controller@900000 {
@@ -5217,6 +5218,7 @@
 			reg = <0x0 0x01d88000 0x0 0x10000>;
 			qcom,ice-use-hwkm;
 			clocks = <&gcc GCC_UFS_PHY_ICE_CORE_CLK>;
+			status = "okay";
 		};
 
 		usb_1_hsphy: phy@88e3000 {
