UBUNTU: SAUCE: arm64: dts: qcm6490: enable platform sound-dai
BugLink: https://bugs.launchpad.net/bugs/2114148 ([RB3] Enable sound-dais in our kernel for ALSA)

This is required to make kernel ALSA PCM devices working.

Note that there are several of qcom/qcs5430-*-mezz.dts files that also
define their own sound node with settings for sound-dai but all of them
seem to end up including the qcom/qcs6490-addons-rb3gen2.dtsi one way or
another. Since those .dts files only add things on top, the platform
nodes are inherited and there is no need to modify them directly.

Signed-off-by: Krzysztof Adamski <krzysztof.adamski@canonical.com>
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcm6490.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcm6490.dtsi
@@ -406,8 +406,11 @@
 
 					q6apmbedai: bedais {
 						compatible = "qcom,q6apm-lpass-dais";
-						q6apm-dai-uses-dummy-ops;
 						#sound-dai-cells = <1>;
+					};
+					q6apmdai: dais {
+						compatible = "qcom,q6apm-dais";
+						iommus = <&apps_smmu 0x1801 0x0>;
 					};
 				};
 
