PENDING: arm64: dts: qcom: Enable ICE node for eMMC
Adds ICE eMMC node for qcs8300.

Test: Validated bootup and FBE use-case with wrapped
key feature in both UFS and eMMC device. Bootup and
feature is working as expected.

Change-Id: Ib233fc0d08b619c7fbfbf4d9d64db14874e520a9
Signed-off-by: Abhinaba Rakshit <quic_arakshit@quicinc.com>
(cherry picked from commit 3cc1959d96a4872f6736cec3bde2279611f801cf)
(cherry picked from commit b814bca435e6e8feacc34fdcd530d2a81759f1d5)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs8300.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcs8300.dtsi
@@ -7794,6 +7794,7 @@
 			iommus = <&apps_smmu 0x0 0x0>;
 
 			resets = <&gcc GCC_SDCC1_BCR>;
+			qcom,ice = <&ice_mmc>;
 
 			sdhc1_opp_table: opp-table {
 				compatible = "operating-points-v2";
@@ -7863,6 +7864,13 @@
 					opp-avg-kBps = <390000 0>;
 				};
 			};
+		};
+
+		ice_mmc: crypto@87c8000 {
+			compatible = "qcom,inline-crypto-engine";
+			reg = <0x0 0x87c8000 0x0 0x18000>;
+			qcom,ice-use-hwkm;
+			clocks = <&gcc GCC_SDCC1_ICE_CORE_CLK>;
 		};
 	};
 
