arm64: dts: rubikpi3: enable HDMI OUT audio
Change-Id: I473a8eea4e417ec36105f82f2b617f6fc8bd4a61
Signed-off-by: hongyang-rp <hongyang.zhao@thundersoft.com>

--- a/arch/arm64/boot/dts/qcom/rubikpi3.dtsi
+++ b/arch/arm64/boot/dts/qcom/rubikpi3.dtsi
@@ -1349,6 +1349,99 @@
 	};
 };
 
+&lpass_tlmm {
+	lpass_ext_mas_clk1_a: ext-master-clk1-a-state {
+		pins = "gpio13";
+		function = "ext_mas_clk1_a";
+	};
+
+	lpass_ext_mas_clk1_a_sleep: ext-master-clk1-a-sleep {
+		pins = "gpio13";
+		function = "ext_mas_clk1_a";
+		drive-strength = <2>;
+		bias-pull-down;
+		input-enable;
+	};
+
+	lpass_qua_mi2s_sclk: qua-mi2s-sclk-state {
+		pins = "gpio0";
+		function = "qua_mi2s_sclk";
+	};
+
+	lpass_qua_mi2s_sclk_sleep: qua-mi2s-sclk-sleep {
+		pins = "gpio0";
+		function = "qua_mi2s_sclk";
+		drive-strength = <2>;
+		bias-pull-down;
+		input-enable;
+	};
+
+	lpass_qua_mi2s_ws: qua-mi2s-ws-state {
+		pins = "gpio1";
+		function = "qua_mi2s_ws";
+	};
+
+	lpass_qua_mi2s_ws_sleep: qua-mi2s-ws-sleep {
+		pins = "gpio1";
+		function = "qua_mi2s_ws";
+		drive-strength = <2>;
+		bias-pull-down;
+		input-enable;
+	};
+
+	lpass_qua_mi2s_data0: qua-mi2s-data0-state {
+		pins = "gpio2";
+		function = "qua_mi2s_data";
+	};
+
+	lpass_qua_mi2s_data0_sleep: qua-mi2s-data0-sleep {
+		pins = "gpio2";
+		function = "qua_mi2s_data";
+		drive-strength = <2>;
+		bias-pull-down;
+		input-enable;
+	};
+
+	lpass_qua_mi2s_data1: qua-mi2s-data1-state {
+		pins = "gpio3";
+		function = "qua_mi2s_data";
+	};
+
+	lpass_qua_mi2s_data1_sleep: qua-mi2s-data1-sleep {
+		pins = "gpio3";
+		function = "qua_mi2s_data";
+		drive-strength = <2>;
+		bias-pull-down;
+		input-enable;
+	};
+
+	lpass_qua_mi2s_data2: qua-mi2s-data2-state {
+		pins = "gpio4";
+		function = "qua_mi2s_data";
+	};
+
+	lpass_qua_mi2s_data2_sleep: qua-mi2s-data2-sleep {
+		pins = "gpio4";
+		function = "qua_mi2s_data";
+		drive-strength = <2>;
+		bias-pull-down;
+		input-enable;
+	};
+
+	lpass_qua_mi2s_data3: qua-mi2s-data3-state {
+		pins = "gpio5";
+		function = "qua_mi2s_data";
+	};
+
+	lpass_qua_mi2s_data3_sleep: qua-mi2s-data3-sleep {
+		pins = "gpio5";
+		function = "qua_mi2s_data";
+		drive-strength = <2>;
+		bias-pull-down;
+		input-enable;
+	};
+};
+
 / {
 	sound: sound {
 		compatible = "qcom,qcm6490-sndcard";
@@ -1359,11 +1452,23 @@
 
 		pinctrl-names = "default", "stub_aif0_active", "stub_aif0_sleep";
 		pinctrl-0 = <&mi2s0_data0_sleep>, <&mi2s0_data1_sleep>, <&mi2s0_mclk>,
-					<&mi2s0_sclk_sleep>, <&mi2s0_ws_sleep>;
+					<&mi2s0_sclk_sleep>, <&mi2s0_ws_sleep>,
+					<&lpass_ext_mas_clk1_a_sleep>, <&lpass_qua_mi2s_sclk_sleep>,
+					<&lpass_qua_mi2s_ws_sleep>, <&lpass_qua_mi2s_data0_sleep>,
+					<&lpass_qua_mi2s_data1_sleep>, <&lpass_qua_mi2s_data2_sleep>,
+					<&lpass_qua_mi2s_data3_sleep>;
 		pinctrl-1 = <&mi2s0_data0>, <&mi2s0_data1>, <&mi2s0_mclk>,
-					<&mi2s0_sclk>, <&mi2s0_ws>;
+					<&mi2s0_sclk>, <&mi2s0_ws>,
+					<&lpass_ext_mas_clk1_a>, <&lpass_qua_mi2s_sclk>,
+					<&lpass_qua_mi2s_ws>, <&lpass_qua_mi2s_data0>,
+					<&lpass_qua_mi2s_data1>, <&lpass_qua_mi2s_data2>,
+					<&lpass_qua_mi2s_data3>;
 		pinctrl-2 = <&mi2s0_data0_sleep>, <&mi2s0_data1_sleep>, <&mi2s0_mclk>,
-					<&mi2s0_sclk_sleep>, <&mi2s0_ws_sleep>;
+					<&mi2s0_sclk_sleep>, <&mi2s0_ws_sleep>,
+					<&lpass_ext_mas_clk1_a_sleep>, <&lpass_qua_mi2s_sclk_sleep>,
+					<&lpass_qua_mi2s_ws_sleep>, <&lpass_qua_mi2s_data0_sleep>,
+					<&lpass_qua_mi2s_data1_sleep>, <&lpass_qua_mi2s_data2_sleep>,
+					<&lpass_qua_mi2s_data3_sleep>;
 
 		mi2s-playback-dai-link {
 			link-name = "MI2S-LPAIF-RX-PRIMARY";
@@ -1382,6 +1487,16 @@
 			};
 			codec {
 				sound-dai = <&msm_stub_codec 1>, <&es8316>;
+			};
+		};
+
+		quaternary-mi2s-playback-dai-link {
+			link-name = "MI2S-LPAIF_RXTX-RX-PRIMARY";
+			cpu {
+				sound-dai = <&q6apmbedai QUATERNARY_MI2S_RX>;
+			};
+			codec {
+				sound-dai = <&msm_stub_codec 0>;
 			};
 		};
 	};
